QStyleSheetStyle: Fix push button hit testing with padding

Amends f9940b15f7f0fde731431626172939b9821fd660, which
amended 6e1d70ae12baae4610356ec7b69635ad75a97b4e.

The bevel of the button is not defined by the contentsRect, but by the
borderRect that the stylesheet style calculates.

Change-Id: I9a0d5bf29a06ce2270014f0d144e33cc3a1a7473
Fixes: QTBUG-86587
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 757a9c21c18faad5573308d8dd85428a4519ac7d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>